--- a/frontend/templates/base/base.html
+++ b/frontend/templates/base/base.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Семейный архив{% endblock %}</title>
+    <title>{% block title %}Семейный архив хранения анализов{% endblock %}</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Подключение кастомных стилей -->
     <link rel="stylesheet" href="{{ url_for('static', path='css/main.css') }}">
-    {% block styles %}{% endblock %}
+    {% block styles %} {% endblock %}
 </head>
+
+
 <body>
-
     {% include 'components/navbar.html' %}
-
     <main>
         {% block content %}{% endblock %}
     </main>
-
     {% include 'components/footer.html' %}
 
 </body>
